# render-ogl

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  conanfile.py  run.sh
cmake/modules/: FindSOIL.cmake  Findassimp.cmake
resources/models/: sponza_obj.rar
resources/shaders/: checkerboard.frag  checkerboard.vert  default_vertex.glsl  ground.fs  light_fragment.glsl  model_fragment.glsl  model_phong_f.glsl  model_simple.vert  model_vertex.glsl  phong_model.frag  phong_model.vert
scripts/: generate_glmock.py  install_assimp.sh  install_glew.sh  install_glfw.sh
src/: Camera.cpp  Camera.h  EulerCamera.cpp  EulerCamera.h  FontRender.cpp  FontRender.h  FpsCounter.h  FpsMovement.cpp  FpsMovement.h  Input.cpp  Input.h  LightObject.cpp  LightObject.h  Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelObject.cpp  ModelObject.h  ModelObjectPhong.cpp  ModelObjectPhong.h  Scene.cpp  Scene.h  SceneObject.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.h  Util.cpp  Util.h  Vertex.h  documentation.h  main.cpp  main.h  opengl.h
src/demos/: sponza.cpp
src/engine/: Engine.cpp  Engine.h  Input.cpp  Input.h  Manager.cpp  Manager.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneObject.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.h  Texture2D.cpp  Texture2D.h  Timing.cpp  Timing.h
src/engine/components/: CustomShaderObject.cpp  CustomShaderObject.h  LightObject.cpp  LightObject.h  ModelObject.cpp  ModelObject.h  ModelObjectPhong.cpp  ModelObjectPhong.h  PhongLight.cpp  PhongLight.h  PhongModel.cpp  PhongModel.h
src/engine/components/Phong/: PhongLight.cpp  PhongLight.h  PhongModel.h
src/engine/handler/: Camera.h  CameraHandler.h  EulerCamera.cpp  EulerCamera.h  FpsMovement.cpp  FpsMovement.h  FrameHandler.h  InputHandler.h  KeyboardHandler.h  MouseHandler.h
src/engine/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.h  Vertex.h
src/engine/particles/: RandomTexture.cpp  RandomTexture.h  ShaderUpdater.cpp  ShaderUpdater.h  System.cpp  System.h
src/engine/scene/: Camera.h  EulerCamera.cpp  EulerCamera.h  FontRender.cpp  FontRender.h  FpsCounter.cpp  FpsCounter.h  FpsMovement.cpp  FpsMovement.h  Phong.cpp  Phong.h  SceneObject.h
src/engine/shader/: compiler.cpp  compiler.h  stage.h  stages.h
tests/: generate_glmock.py  glmock.cpp  glmock.hpp  test.cpp
tests/engine/: Model.cpp  Shader.cpp
tests/performance/: render.cpp
tests/util/: split.cpp
